REOPENED301851
[visionOS] Chrome missing after exiting spatial fullscreen on uploadvr.com
https://bugs.webkit.org/show_bug.cgi?id=301851
Summary [visionOS] Chrome missing after exiting spatial fullscreen on uploadvr.com
Andy Estes
Reported 2025-11-03 02:05:42 PST
SSIA
Attachments
Andy Estes
Comment 1 2025-11-03 02:05:43 PST
Andy Estes
Comment 2 2025-11-03 02:21:02 PST
EWS
Comment 3 2025-11-03 17:06:17 PST
Committed 302506@main (dd4b8a6a214f): <https://commits.webkit.org/302506@main> Reviewed commits have been landed. Closing PR #53336 and removing active labels.
Andy Estes
Comment 4 2025-11-05 23:13:29 PST
Re-opening for pull request https://github.com/apple/WebKit/pull/3985
Note You need to log in before you can comment on or make changes to this bug.